correcao css max and min

--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -31,6 +31,22 @@
     font-family: 'Nova Mono', monospace;
 }
 
+@media (max-width: 915px) and (max-height: 415px) {
+
+    .circulo{
+        height: 9em;
+        width: 9em;
+    }
+
+    .ws{font-size: 5em;}
+
+    .container {
+        flex-direction: row;
+        bottom: 10%;
+    }
+}
+
+
 @media (max-width: 479px){
 
     .circulo{
