--- a/src/components/Habilidades.module.css
+++ b/src/components/Habilidades.module.css
@@ -49,6 +49,14 @@
     cursor: pointer;
 }
 
+.pon{
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
 .d{
     position: relative;
     height: 50px;
@@ -169,4 +177,46 @@
 @media (max-width: 320px) {
     
     .conteiner{width: 300px;}   
+}
+
+@media (max-width: 915px) and (max-height: 415px) {
+
+    .h{
+        height:100px;
+        top: -10px;
+    }
+
+    .tls{top: -10%;}
+
+    .conteiner h1{
+        padding-bottom: 1em;
+        font-size: 2em;}
+
+    .contnei svg{font-size: 2em;}
+
+    .conteiner {height: 230px;}
+
+    .tela{
+        left: -2%;
+        font-size: 2em;}
+
+}
+
+@media (max-width: 896px) and (max-height: 415px){
+
+    .h{
+        height:80px;
+        width: 70%;
+    }
+    .tls{
+        width: 70%;
+      }
+    
+    .contnei{padding-left: 1em;}
+    .conteiner {
+        left: 15%;
+        top: 20%;
+        height: 200px;}
+
+
 }
