--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -14,6 +14,7 @@
     top: 3%;
     right: 5%;
 }
+
 .imGG img {border-radius: 10px;}
 
 @media (max-width: 1413px){
@@ -29,6 +30,7 @@
 @media (max-width: 1267px){
 
     .hab{
+        position: relative;
         display: flex;
     } 
 }
@@ -70,4 +72,25 @@
 @media (max-width: 321px){
 
     .imGG img{width: 270px;}
+}
+
+@media (max-width: 915px) and (max-height: 415px){
+
+    .conteiner{
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+        
+    .imGG img{width: 250px;}
+
+    .hab{padding: 10px;}
+
+}
+
+@media (max-width: 896px) and (max-height: 414px){
+
+    .hab{top: -15%;}
+    .imGG{right: -12%;}
+
 }
