--- a/src/components/layout_projeto/LayoutProjeto.module.css
+++ b/src/components/layout_projeto/LayoutProjeto.module.css
@@ -4,6 +4,7 @@
     display: flex;
     width: 100%;
     height: 70%;
+    bottom: 10%;
 }
 
 .tela{
@@ -32,7 +33,7 @@
 
 .active{
     position: absolute;
-    height: 100vh;
+    height: 90vh;
     z-index: 2;
 
     animation-name: Slider;
