--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -1,7 +1,7 @@
 .conteiner{
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: 0.5fr 0.2fr 1fr;
     text-align: justify;
     font-size: 1.3em;
     height: 100vh;
