--- a/src/components/infoprojetos/InfoProjeto.module.css
+++ b/src/components/infoprojetos/InfoProjeto.module.css
@@ -140,47 +140,10 @@
     
 }
 
-@media (max-width: 360px) {
-    
-}
-
-@media (max-width: 320px) {
-
-}
-
-@media (max-width: 390px) and (max-height: 844px){
-
-
-}
-
-@media (max-width: 414px) and (max-height: 896px){
-    
-}
-
-@media (max-width: 412px) and (max-height: 915px){
-    
-}
-
-@media (max-width: 390px) and (max-height: 844px){
-    
-}
 
 @media (max-width: 375px) and (max-height: 667px){
 
-}
-
-@media (max-width: 360px) and (max-height: 740px){
-
-}
-
-@media (max-width: 360px) and (max-height: 640px){
-
-}
-
-@media (max-width: 320px) and (max-height: 658px){
-
-}
-
-@media (max-width: 320px) and (max-height: 480px){
-    
+    .dadosSkil{
+        bottom: 2%;
+    }
 }
