--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -57,8 +57,6 @@
 
     .conteiner{
         height: 100vh;
-        grid-template-columns: 1fr 2fr;
-        grid-template-rows: 2fr 0.5fr;
     }
 }
 
@@ -91,20 +89,41 @@
 @media (max-width: 590px){
 
     .conteiner{
+        height: 110vh;
+    }
+}
+
+@media (max-width: 475px){
+
+    .conteiner{
         height: 130vh;
     }
 }
 
-@media (max-width: 445px){
+@media (max-width: 370px){
 
     .conteiner{
-        height: 180vh;
+        height: 160vh;
     }
 }
 
-@media (max-width: 414px) and (max-height: 667px){
+@media (max-width: 414px) and (max-height: 896px){
+
+    .conteiner{
+       height: 150vh;
+    }
+}
+
+@media (max-width: 414px) and (max-height: 736px){
 
     .conteiner{
        height: 190vh;
+    }
+}
+
+@media (max-width: 375px) and (max-height: 667px){
+
+    .conteiner{
+       height: 200vh;
     }
 }
