--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -127,3 +127,10 @@
        height: 200vh;
     }
 }
+
+@media (max-width: 320px) and (max-height: 667px){
+
+    .conteiner{
+       height: 240vh;
+    }
+}
