--- a/src/styles/Projetos.module.css
+++ b/src/styles/Projetos.module.css
@@ -3,6 +3,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     height: 100vh;
+    background-color: red;
 }
 
 .conteinerProjetos{
