--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -134,3 +134,10 @@
        height: 240vh;
     }
 }
+
+@media (max-width: 320px) and (max-height: 565px){
+
+    .conteiner{
+       height: 270vh;
+    }
+}
