--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -69,3 +69,43 @@
         font-size:2.4em;
     }
 }
+
+@media (max-width: 896px) and (max-height: 414px){
+
+    .circulo{bottom: -40%;}
+
+    .nome{
+        position: relative;
+        top: 40%;
+    }
+
+}
+
+
+@media (max-width: 736px) and (max-height: 414px){
+
+    .circulo{bottom: -40%;}
+
+    .nome{
+        position: relative;
+        top: 40%;
+    }
+
+}
+
+@media (max-width: 667px) and (max-height: 375px){
+
+    .circulo{bottom: -40%;}
+
+    .nome{
+        position: relative;
+        top: 40%;
+    }
+    .circulo{
+        height: 7em;
+        width: 7em;
+    }
+    .ws{
+        font-size: 3.5em;}
+
+}
