--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -134,3 +134,28 @@
        height: 250vh;
     }
 }
+
+@media (max-width: 896px) and (max-height: 414px){
+
+    .conteiner{
+        height: 200vh;
+     }
+
+}
+
+@media (max-width: 736px) and (max-height: 414px){
+
+    .conteiner{
+        height: 210vh;
+     }
+
+}
+
+@media (max-width: 667px) and (max-height: 375px){
+
+    .conteiner{
+        height: 260vh;
+     }
+
+}
+
