--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -151,6 +151,14 @@
 
 }
 
+@media (max-width: 667px) and (max-height: 414px){
+
+    .conteiner{
+        height: 230vh;
+     }
+
+}
+
 @media (max-width: 667px) and (max-height: 375px){
 
     .conteiner{
@@ -158,4 +166,3 @@
      }
 
 }
-
