atualizacao layout e correcao em mediasquerys

--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -1,17 +1,18 @@
 .conteiner{
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 0.5fr 0.2fr 1fr;
+    grid-template-rows: 0.5fr 0.2fr 0.2fr;
     text-align: justify;
     font-size: 1.3em;
     height: 100vh;
+    width: 70%;
 }
 
 .ImagemSobre{
     display: flex;
     justify-content: center;
     align-items: center;    
-    margin: 15px;
+    margin: 5px;
 }
 
 .ImagemSobre img {
@@ -19,21 +20,29 @@
 }
 
 .Sobre{
-    margin: 15px;
+    margin: 5px;
 }
 
 .Formacao{
     grid-column-start: 2;
     grid-column-end: 3;
     padding-top: 15px;
-    margin: 15px;
+    margin: 5px;
 }
 
 .ApresentacaoSobre{
     grid-column-start: 1;
     grid-column-end: 3;
     justify-items: center;
-    margin: 15px;
+    margin: 5px;
+}
+
+@media (max-width: 1024px){
+
+    .conteiner{
+        width: 90%;
+    }
+
 }
 
 @media (max-width: 900px){
