--- a/src/components/layout_projeto/LayoutProjeto.module.css
+++ b/src/components/layout_projeto/LayoutProjeto.module.css
@@ -1,10 +1,10 @@
 .conteiner{
     position: relative;
     justify-content: center;
+    align-items: center;
     display: flex;
     width: 100%;
     height: 70%;
-    bottom: 10%;
 }
 
 .tela{
