--- a/src/styles/Contato.module.css
+++ b/src/styles/Contato.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     height: 90vh;
+    width: 70%;
     flex-wrap: wrap;
     background-image: linear-gradient(180deg, black, gray);
 }
@@ -71,6 +72,15 @@
     .linha{top: 15.8rem;}
 }
 
+
+@media (max-width: 1024px){
+
+    .conteiner{
+        width: 90%;
+    }
+
+}
+
 @media (max-width: 480px) {
     
     .pro{
@@ -91,6 +101,10 @@
     .linha{
         top: 15rem;
     }
+}
+
+@media (max-width: 600px) {
+    .conteiner{width: 100%;}
 }
 
 @media (max-width: 414px) {
@@ -119,4 +133,62 @@
     .social{
         right: 3em;
         bottom: 1em;}
+}
+
+
+@media (max-width: 896px) and (max-height: 414px){
+
+    .pro{
+        left: 60%;
+    }
+
+    .desen{
+        left: 10%;
+    }
+    
+
+    .social svg{
+        font-size: 0.8em;
+    }
+
+}
+
+@media (max-width: 736px) and (max-height: 414px){
+
+    .social{
+        right: 10%;
+    }
+
+}
+
+@media (max-width: 746px) and (max-height: 349px){
+    
+    .social{
+        right: 10%;
+        top: 85%;
+    }
+    .social svg{
+        font-size: 0.6em;
+    }
+
+}
+
+@media (max-width: 667px) and (max-height: 375px){
+
+    .pro{
+        font-size: 0.7em;
+        left: 60%;
+    }
+    
+    .desen{
+        left: 10%;
+    }
+    
+    .social{
+        right: 10%;
+        top: 80%;
+    }
+    .social svg{
+        font-size: 0.6em;
+    }
 }
