--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,34 +2,35 @@
     display: flex;    
     position: relative;
     justify-content: center;
-    height: 90vh;
+    height: 100vh;
+    width: 100%;
     top: 0;
     align-items: center;
     overflow: hidden;
     flex-wrap: wrap;
 }
 
-.imGG{
+.imagemHome{
     position: relative;
     top: 3%;
-    right: 5%;
+    right: 15%;
 }
 
-.imGG img {border-radius: 10px;}
+.imagemHome img {border-radius: 10px;}
 
 @media (max-width: 1413px){
 
-    .imGG{right: 1%;} 
+    .imagemHome{right: 1%;} 
 }
 
 @media (max-width: 1280px){
 
-    .imGG{right: 0;} 
+    .imagemHome{right: 0;} 
 }
 
 @media (max-width: 1267px){
 
-    .hab{
+    .habilidades{
         position: relative;
         display: flex;
     } 
@@ -38,9 +39,9 @@
 
 @media (max-width: 768px){
 
-    .imGG img{width: 600px;}
+    .imagemHome img{width: 600px;}
     
-    .hab{
+    .habilidades{
         position: relative;
         display: flex;
         justify-content: center;
@@ -49,21 +50,26 @@
     }
 }
 
+@media (max-width: 650px) {
+    .conteiner{width: 100%;}
+}
+
+
 @media (max-width: 618px){
 
-    .imGG img{width: 450px;}
+    .imagemHome img{width: 450px;}
 }
 
 @media (max-width: 479px){
 
-    .imGG img{width: 400px;}
+    .imagemHome img{width: 400px;}
 }
 
 @media (max-width: 400px){
 
-    .imGG img{width: 330px;}
+    .imagemHome img{width: 330px;}
     
-    .hab{
+    .habilidades{
         width: 95%;
         left: 1%;
     }
@@ -71,7 +77,7 @@
 
 @media (max-width: 321px){
 
-    .imGG img{width: 270px;}
+    .imagemHome img{width: 270px;}
 }
 
 @media (max-width: 915px) and (max-height: 415px){
@@ -82,28 +88,28 @@
         justify-content: space-around;
     }
         
-    .imGG img{width: 250px;}
+    .imagemHome img{width: 250px;}
 
-    .hab{padding: 10px;}
+    .habilidades{padding: 10px;}
 
 }
 
 @media (max-width: 896px) and (max-height: 414px){
 
-    .hab{top: -15%;}
-    .imGG{right: -4%;}
+    .habilidades{top: -15%;}
+    .imagemHome{right: -4%;}
 
 }
 
 @media (max-width: 667px) and (max-height: 375px){
 
-    .imGG img{width: 170px;}
-    .imGG{right: -12%;}
+    .imagemHome img{width: 170px;}
+    .imagemHome{right: -12%;}
 
 }
 
 @media (max-width: 736px) and (max-height: 414px){
 
-    .imGG{right: -12%;}
+    .imagemHome{right: -12%;}
 
 }
