--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100%;
   position: relative;
   background: #d6e0e2;
   text-align: center;
