--- a/src/styles/Projetos.module.css
+++ b/src/styles/Projetos.module.css
@@ -3,13 +3,22 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     height: 100vh;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .conteinerProjetos{
-    display: flex;
     position: relative;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     overflow: hidden;
+    height: 100%;
+}
+
+@media (max-width: 600px) {
+    .Conteiner{width: 100%;}
 }
