--- a/src/styles/Contato.module.css
+++ b/src/styles/Contato.module.css
@@ -114,12 +114,11 @@
     .pro{left: 50%;}
 
     .conteiner ol {
-        padding-top: 0em;
-    }
+        padding-top: 0em;}
+
     .conteiner ol li{
         padding-top: 0.5em;
-       font-size: 0.8em;
-    }
+       font-size: 0.8em;}
 
     .linha{top: 11em;}
 
@@ -130,27 +129,22 @@
 @media (max-width: 896px) and (max-height: 415px){
 
     .linha{display: none;}
+
     .social{
         right: 3em;
         bottom: 1em;}
 }
 
-
 @media (max-width: 896px) and (max-height: 414px){
 
     .pro{
-        left: 60%;
-    }
+        left: 60%;}
 
     .desen{
-        left: 10%;
-    }
-    
+        left: 10%;}
 
     .social svg{
-        font-size: 0.8em;
-    }
-
+        font-size: 0.8em;}
 }
 
 @media (max-width: 736px) and (max-height: 414px){
