atualizacao layout e correcao em mediasquerys e mudanca para display grid are contato e correcoes na home

--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -31,21 +31,6 @@
     font-family: 'Nova Mono', monospace;
 }
 
-@media (max-width: 915px) and (max-height: 415px) {
-
-    .circulo{
-        height: 9em;
-        width: 9em;
-    }
-
-    .ws{font-size: 5em;}
-
-    .container {
-        bottom: 30%;
-    }
-}
-
-
 @media (max-width: 479px){
 
     .circulo{
@@ -69,7 +54,29 @@
     }
 }
 
+/* s20fe na vertical */
+@media (max-width: 723px) and (max-height: 280px) {
+
+    .container{
+        bottom: -20%;}
+}
+
+@media (max-width: 915px) and (max-height: 414px) {
+
+    .circulo{
+        height: 7em;
+        width: 7em;
+    }
+
+    .ws{font-size: 4em;}
+
+}
+
 @media (max-width: 896px) and (max-height: 414px){
+
+    .container{
+        bottom: 20%;
+    }
 
     .circulo{bottom: -40%;}
 
@@ -77,25 +84,20 @@
         position: relative;
         top: 40%;
     }
-
 }
 
+/* MEDIDAS IPHONE 8,7,6,6S VERTICAL E HORIZONTAL */
+@media (max-width: 375px) and (max-height: 667px){
 
-@media (max-width: 746px) and (max-height: 414px){
+    .circulo{
+        height: 7.5em;
+        width: 7.5em;
+    }
 
-    .container{bottom: 40%;}
-
-}
-
-@media (max-width: 736px) and (max-height: 414px){
-
-    .container{bottom: 30%;}
-
+    .ws{font-size: 4.5em;}
 }
 
 @media (max-width: 667px) and (max-height: 375px){
-
-    /* .circulo{bottom: -40%;} */
 
     .nome{
         position: relative;
