--- a/src/components/infoprojetos/styles/RestApi.module.css
+++ b/src/components/infoprojetos/styles/RestApi.module.css
@@ -3,8 +3,8 @@
     width: 100%;
     height: 70%;
     display: grid;
-    grid-template-columns: 0.6fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns:1fr;
+    grid-template-rows: 1fr 1fr;
     justify-content: center;
     align-items: center;
 
@@ -13,13 +13,13 @@
 .imagemRestapi{
     position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    width: 90%;
 }
 
 .imagemRestapi img {
     border-radius: 7px;
-    width: 95%;
+    width: 50%;
 }
 
 .conteinerDescricao{
@@ -30,6 +30,8 @@
     row-gap: 5px;
     font-size: 0.5em;
     align-items: center;
+    padding: 10px;
+    height: 400px;
 }
 
 .conteinerDescricao h1 {
@@ -79,18 +81,22 @@
     font-size: 0.7em;
 }
 
+@media (max-width: 1278px){
+
+    .imagemRestapi img { width: 70%;}
+
+}
+
+
+@media (max-width: 1024px){
+
+    .apresentacao p {font-size: 0.9em;}
+
+}
+
 @media (max-width: 769px) {
 
-    .conteiner{
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 2.6fr;
-    }
-
-    .imagemRestapi{top: 25%;}
-
-    .imagemRestapi img {
-        width: 56%;
-    }
+    .conteinerDescricao {height: 400px;}
 
     .skilsTec div {
         font-size: 0.8em;
@@ -100,19 +106,19 @@
         grid-template-rows: 0.2fr 0.7fr 0.2fr 0.2fr;
     }
 
-    .apresentacao ol {
-        left: 3%;
-    }
+    .apresentacao p {font-size: 0.8em;}
+
+    .linkApi{font-size: 0.6em;}
+
 }
 
 @media (max-width: 650px) {
 
+    .imagemRestapi img { width: 90%;}
+
     .conteinerDescricao h1 {
         font-size: 1.2em;
     }
-
-    .imagemRestapi{top: 10%;}
-
 
     .apresentacao h4 {
         font-size: 0.65em;
@@ -123,40 +129,51 @@
 
 @media (max-width: 578px) {
 
+    .conteinerDescricao {
+        bottom: 10%;
+        height: 450px;}
+
     .apresentacao p {
-        font-size: 0.85em;
+        font-size: 0.8em;
     }
 
-    .imagemRestapi{top: -20%;}
+}
 
+@media (max-width: 414px) {
+
+    .conteinerDescricao {
+        bottom: 15%;
+    }
+
+    .apresentacao p {
+        font-size: 0.75em;
+    }
+
+}
+
+@media (max-width: 350px) {
+
+    .conteinerDescricao {
+        bottom: 20%;
+    }
+
+    .apresentacao p {
+        font-size: 0.7em;
+    }
+
+    .linkApi {font-size: 0.5em;}
 }
 
 @media (max-width: 414px) and (max-height: 896px){
 
-    .skilsTec{
-        font-weight: bold;
-        font-size: 0.6em;}
+    .conteinerDescricao {bottom: 25%;}
 
-    .imagemRestapi img {width: 75%;}
-
-    .conteiner h1{font-size: 1.1em;}
-
-    .apresentacao p {font-size: 0.6em;}
-
-    .apresentacao h5 {
-        margin-top: 0px;
+    .apresentacao p {
+        font-size: 0.65em;
     }
 
-    .apresentacao ol {font-size: 0.6em;}
-
 }
-
-@media (max-width: 414px) and (max-height: 736px){
-
-    .imagemRestapi{top: 5%;}
-
-} 
-
+ 
 @media (max-width: 896px) and (max-height: 414px){
 
     .conteiner{
@@ -164,16 +181,39 @@
         grid-template-rows: 1fr;
     }
 
-    .conteinerDescricao{top: 0%;}
-    .apresentacao h5 { margin-top: 0px;}
-
-    .apresentacao p { font-size: 0.9em;}
+    .conteinerDescricao {height: 280px;}
 
     .imagemRestapi img {width: 90%;}
 
 } 
 
+@media (max-width: 414px) and (max-height: 736px){
+
+    .conteinerDescricao {
+        height: 290px;
+    }
+
+    .imagemRestapi{
+        bottom: 10%;
+    }
+
+    .apresentacao p {
+        font-size: 0.6em;
+    }
+
+} 
+
+
+@media (max-width: 375px) and (max-height: 667px){
+
+    .conteinerDescricao{
+        bottom: 32%;
+    }
+}
+
 @media (max-width: 667px) and (max-height: 375px){
 
-    .apresentacao p { font-size: 0.8em}
+    .conteinerDescricao{bottom: 5%;}
+
+    .apresentacao{row-gap: 0px;}
 }
