--- a/src/styles/Projetos.module.css
+++ b/src/styles/Projetos.module.css
@@ -8,7 +8,6 @@
     width: 70%;
     justify-content: center;
     align-items: center;
-
 }
 
 .conteinerProjetos{
@@ -16,7 +15,6 @@
     position: relative;
     justify-content: center;
     align-items: center;
-    margin: 5px;
     height: 70%;
     font-size: 2.7em;
     border-radius: 7px;
@@ -44,6 +42,7 @@
 .active{
     z-index: 1;
     width: 100%;
+    height: 80%;
     position: absolute;
     animation-name: Slider;
     animation-duration: 2s;
@@ -63,10 +62,6 @@
     .Conteiner{width: 95%;}
 }
 
-@media (max-width: 769px){
-    .conteinerProjetos{height: 80%;}
-}
-
 @media (max-width: 414px) and (max-height: 896px){
 
     .Conteiner{width: 90%;}
@@ -83,7 +78,7 @@
 
 @media (max-width: 375px) and (max-height: 667px){
 
-    .conteinerProjetos{height: 95%;}
+    .conteinerProjetos{height: 85%;}
 }
 
 /* keyframe */
