--- a/src/components/infoprojetos/styles/InfoProjeto.module.css
+++ b/src/components/infoprojetos/styles/InfoProjeto.module.css
@@ -1,8 +1,9 @@
 .Container{
+    position: relative;
     width: 100%;
     height: 70%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.7fr 1fr;
     grid-template-rows: 1fr;
     justify-content: center;
     align-items: center;
@@ -16,60 +17,62 @@
 }
 
 .imagemProjeto img{
-    width: 65%;
+    width: 95%;
     border-radius: 7px;
 }
 
 .contSecundario{
+    position: relative;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 0.7fr 1fr 0.3fr;
-    row-gap: 10px;
-    font-size: 0.7em;
-    margin: 10px;
+    grid-template-rows: 0.17fr 0.2fr 1fr 0.1fr;
+    row-gap: 15px;
+    font-size: 0.65em;
+    padding: 10px;
+    height: 700px;
 }
-
-.contSecundario h1{
-    font-size: 1.5em;}
 
 .skils{
-    font-size: 0.8em;}
+    font-size: 0.7em;
+}
 
 .texto{
-    text-align: justify;
+    font-size: 0.8em;
+    text-align: center;
 }
+
+.texto p { width: 100%;}
 
 .link{
     position: relative;
-    top: 20%;
     align-items: flex-end;
     display: flex;
+    font-size: 0.7em;
 }
 
 @media (max-width: 1279px) {
 
     .contSecundario{
-        row-gap: 0px;
-        grid-template-rows: 0.5fr 1fr 1fr 0.3fr;
+        grid-template-rows: 0.1fr 0.14fr 1fr 0.1fr;
     }
 
-    .contSecundario h1{
-        position: relative;
+    .contSecundario h1 {
         font-size: 1.2em;
-        bottom: 60%;
     }
 
-    .skils{
-        position: relative;
-        font-size: 0.7em;
-        bottom: 20%;
-    }
+    .texto{font-size: 0.75em;}
+}
 
-    .texto{font-size: 0.7em;}
 
-    .link{
-        top: 60%;
-        font-size: 0.7em;}
+@media (max-width: 1024px) {
+
+    .texto p { padding-top: 10px;}
+}
+
+
+@media (max-width: 1024px) {
+
+    .contSecundario{height: 750px;}
 }
 
 @media (max-width: 769px) {
@@ -77,134 +80,156 @@
     .Container{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
+        height: 80vh;
     }
 
-    .contSecundario{
-        row-gap: 0px;
-        grid-template-rows: 0.5fr 0.7fr 1fr 0.3fr;
+    .contSecundario {
+        bottom: 10%;
+        height: 450px;
+    }
+
+    .contSecundario h1 {
+        font-size: 1em;
     }
 
     .imagemProjeto{
-        position: relative;
-        bottom: 10%;
+        top: 5%;
     }
 
-    .imagemProjeto img{
-        width: 35%;
+    .imagemProjeto img { 
+        position: relative;
+        left: 25%;
+        width: 40%;
+    }
+
+    .texto p { 
+        font-size: 0.8em;
+        padding-top: 5px;
     }
 
 }
 
-@media (max-width: 414px) {
 
-    .imagemProjeto img{
-        width: 50%;
+@media (max-width: 590px) {
+
+    .contSecundario {
+        height: 500px;
     }
 
-    .contSecundario h1{
-        font-size: 1em;
-        bottom: 30%;
+    .imagemProjeto{
+        top: 0%;
+    }
+
+    .contSecundario {
+        bottom: 0%;
+        height: 450px;
     }
 
     .skils{
         font-size: 0.6em;
-        bottom: 10%;
     }
 
-    .texto{font-size: 0.6em;}
+    .texto p { 
+        font-size: 0.7em;
 
-    .link{
-        font-size: 0.6em;}
-  
+    }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 550px) {
+
+    .imagemProjeto img{
+        left: 0;
+        width: 50%;
+    }
+
+}
+
+@media (max-width: 420px) {
+
+    .imagemProjeto { top: -10%;}
 
     .imagemProjeto img{
         width: 55%;
     }
 
-    .contSecundario h1{
-        font-size: 0.9em;
-        bottom: 0%;
+    .contSecundario {
+        bottom: 24%;
+        height: 400px;
     }
 
-    .skils{
-        font-size: 0.5em;
-        bottom: 0%;
-    }
-
-    .texto{font-size: 0.5em;}
-
-    .link{
-        font-size: 0.5em;}
-  
+    .link{font-size: 0.55em;}
 }
 
-@media (max-width: 414px) and (max-height: 736px){
-
-    .contSecundario h1{
-        font-size: 0.9em;
-    }
-
-    .skils{
-        font-size: 0.5em;
-    }
-
-    .texto{font-size: 0.5em;}
-
-    .link{
-        font-size: 0.5em;}
-}
-
-@media (max-width: 360px) and (max-height: 780px){
-
+@media (max-width: 380px) {
 
     .imagemProjeto img{
         width: 60%;
     }
 
     .contSecundario h1{
-        font-size: 0.8em;
+        font-size: 0.9em;
+        bottom: 0%;
     }
 
     .skils{
-        font-size: 0.4em;
+        font-size: 0.5em;
+        bottom: 0%;
     }
 
-    .texto{font-size: 0.4em;}
+    .texto{font-size: 0.6em;}
 
     .link{
-        font-size: 0.4em;}
+        font-size: 0.5em;}
+  
 }
 
-@media (max-width: 375px) and (max-height: 812px){
+@media (max-width: 380px) {
+
+    .imagemProjeto img{
+        width: 70%;
+    }
+}
+
+ 
+@media (max-width: 414px) and (max-height: 896px){
+
+    .imagemProjeto {
+        top: -5%;
+    }
 
     .imagemProjeto img{
         width: 50%;
     }
+    
+    .contSecundario{
+        height: 350px;
+        bottom: 5%;
+    }
 
     .contSecundario h1{
-        font-size: 0.88em;
+        font-size: 1em;
     }
 
     .skils{
-        font-size: 0.48em;
+        font-size: 0.5em;
     }
 
-    .texto{font-size: 0.48em;}
+    .texto{font-size: 0.6em;}
 
     .link{
-        font-size: 0.48em;}
-}
-
+        font-size: 0.5em;}
+} 
 
 @media (max-width: 375px) and (max-height: 667px){
 
     .imagemProjeto{bottom: 0%;}
 
     .imagemProjeto img{
-        width: 60%;
+        width: 50%;
+    }
+
+    .contSecundario{
+        height: 310px;
     }
 
     .contSecundario h1{
@@ -223,108 +248,62 @@
         font-size: 0.5em;}
 }
 
-
-/* VERTICAL */
-
 @media (max-width: 896px) and (max-height: 414px){
 
-    .imagemProjeto{bottom: 0%;}
-
-    .imagemProjeto img{
-        width: 50%;
-    }
-
-    .contSecundario h1{
-        font-size: 1em;
-    }
-
-    .skils{
-        font-size: 0.7em;
-    }
-
-    .texto{font-size: 0.7em;}
-
-    .link{
-        font-size: 0.7em;}
-}
-
-@media (max-width: 736px) and (max-height: 414px){
-
     .Container{
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 0.4fr 1fr;
         grid-template-rows: 1fr;
     }
 
-    .imagemProjeto{bottom: 0%;}
-
-    .imagemProjeto img{
-        width: 50%;
-    }
-
-    .contSecundario h1{
-        font-size: 1em;
-    }
-
-    .skils{
-        font-size: 0.7em;
-    }
-
-    .texto{font-size: 0.7em;}
-
-    .link{
-        font-size: 0.7em;}
-}
-
-
-@media (max-width: 723px) and (max-height: 280px){
-
-    .Container{
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-    }
-    
-    .imagemProjeto{bottom: 0%;}
-
-    .imagemProjeto img{
-        width: 40%;
-    }
-
-    .contSecundario h1{
-        font-size: 0.9em;
-    }
-
-    .skils{
-        font-size: 0.6em;
+    .contSecundario{
+        height: 310px;
     }
 
     .texto{font-size: 0.6em;}
+    .texto p {padding-top: 0;}
 
-    .link{
-        font-size: 0.6em;}
+}
+
+@media (max-width: 723px) and (max-height: 280px){
+
+    .contSecundario{height: 220px;}
+
+    .imagemProjeto{
+        top: 0%;}
+
+
+    .imagemProjeto img { 
+        left: 5%;
+        width: 85%;
+    }
 }
 
 @media (max-width: 667px) and (max-height: 375px){
 
-    .Container{
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-    }
-    
-    .imagemProjeto{bottom: 0%;}
-    .imagemProjeto img{
-        width: 60%;
+
+    .contSecundario{
+        top: 1%;
+        height: 270px;
     }
 
-    .contSecundario h1{
-        font-size: 1em;
+    .imagemProjeto img { 
+        left: 5%;
+        width: 85%;
     }
 
-    .skils{
-        font-size: 0.6em;
+}
+
+@media (max-width: 736px) and (max-height: 414px){
+
+
+    .contSecundario{
+        top: 1%;
+        height: 270px;
     }
 
-    .texto{font-size: 0.6em;}
+    .imagemProjeto img { 
+        left: 5%;
+        width: 85%;
+    }
 
-    .link{
-        font-size: 0.6em;}
 }
