--- a/src/components/infoprojetos/styles/InfoProjeto.module.css
+++ b/src/components/infoprojetos/styles/InfoProjeto.module.css
@@ -190,6 +190,111 @@
     }
 }
 
+@media (max-height: 844px) {
+
+    .imagemProjeto img{
+        height: 90%;
+    }
+
+    .imagemProjeto{
+        top: 0%;
+    }
+
+    .contSecundario {
+        bottom: 0%;
+        height: 450px;
+    }
+
+    .skils{
+        font-size: 0.6em;
+    }
+
+    .texto p { 
+        font-size: 0.7em;
+
+    }
+}
+
+
+@media (max-height: 772px) {
+
+    .imagemProjeto img{
+        width: 60%;
+    }
+}
+
+@media (max-height: 568px) {
+
+    .imagemProjeto img{
+        height: 50%;
+    }
+
+    .imagemProjeto{
+        top: 0%;
+    }
+
+    .contSecundario h1{
+        font-size: 1em;
+        bottom: 0%;
+    }
+
+    .contSecundario {
+        bottom: 0%;
+        height: 400px;
+    }
+
+    .skils{
+        font-size: 0.6em;
+    }
+
+    .texto p { 
+        font-size: 0.65em;
+
+    }
+
+
+    .link{
+        font-size: 0.5em;}
+
+}
+
+@media (max-height: 940px){
+
+    .imagemProjeto {
+        top: -5%;
+    }
+
+    .imagemProjeto img{
+        width: 80%;
+    }
+    
+    .contSecundario{
+        height: 350px;
+        bottom: 5%;
+    }
+
+    .contSecundario h1{
+        font-size: 1em;
+    }
+
+    .skils{
+        font-size: 0.5em;
+    }
+
+    .texto{font-size: 0.6em;}
+
+    .link{
+        font-size: 0.5em;}
+} 
+
+
+@media (max-height: 780px){
+
+    .imagemProjeto img{
+        left: 28%;
+    }
+  
+} 
  
 @media (max-width: 414px) and (max-height: 896px){
 
