--- a/src/styles/Projetos.module.css
+++ b/src/styles/Projetos.module.css
@@ -42,7 +42,7 @@
 .active{
     z-index: 1;
     width: 100%;
-    height: 80%;
+    height: 80vh;
     position: absolute;
     animation-name: Slider;
     animation-duration: 2s;
@@ -60,6 +60,27 @@
 
 @media (max-width: 800px){
     .Conteiner{width: 95%;}
+}
+
+@media (max-height: 940px){
+
+    .Conteiner{height: 100vh;}
+    .conteinerProjetos{height: 80vh;}
+} 
+
+@media (max-height: 700px){
+
+    .Conteiner{height: 130vh;}
+} 
+
+@media (max-height: 662px){
+
+    .Conteiner{height: 150vh;}
+}
+
+@media (max-height: 578px){
+
+    .Conteiner{height: 170vh;}
 }
 
 @media (max-width: 414px) and (max-height: 896px){
