--- a/src/components/infoprojetos/styles/InfoProjeto.module.css
+++ b/src/components/infoprojetos/styles/InfoProjeto.module.css
@@ -1,7 +1,7 @@
 .Container{
     position: relative;
     width: 100%;
-    height: 70%;
+    height: 100%;
     display: grid;
     grid-template-columns: 0.7fr 1fr;
     grid-template-rows: 1fr;
@@ -17,7 +17,7 @@
 }
 
 .imagemProjeto img{
-    width: 95%;
+    width: 80%;
     border-radius: 7px;
 }
 
@@ -29,7 +29,7 @@
     row-gap: 15px;
     font-size: 0.65em;
     padding: 10px;
-    height: 700px;
+    height:100%;
 }
 
 .skils{
@@ -63,19 +63,7 @@
     .texto{font-size: 0.75em;}
 }
 
-
 @media (max-width: 1024px) {
-
-    .texto p { padding-top: 10px;}
-}
-
-
-@media (max-width: 1024px) {
-
-    .contSecundario{height: 750px;}
-}
-
-@media (max-width: 769px) {
 
     .Container{
         grid-template-columns: 1fr;
@@ -83,23 +71,15 @@
         height: 80vh;
     }
 
-    .contSecundario {
-        bottom: 10%;
-        height: 450px;
-    }
 
     .contSecundario h1 {
         font-size: 1em;
     }
 
-    .imagemProjeto{
-        top: 5%;
-    }
-
     .imagemProjeto img { 
         position: relative;
-        left: 25%;
-        width: 40%;
+        top: 5px;
+        width: 30%;
     }
 
     .texto p { 
@@ -109,62 +89,12 @@
 
 }
 
+@media (max-width: 780px) {
 
-@media (max-width: 590px) {
-
-    .contSecundario {
-        height: 500px;
+    .imagemProjeto img { 
+        width: 37%;
     }
-
-    .imagemProjeto{
-        top: 0%;
-    }
-
-    .contSecundario {
-        bottom: 0%;
-        height: 450px;
-    }
-
-    .skils{
-        font-size: 0.6em;
-    }
-
-    .texto p { 
-        font-size: 0.7em;
-
-    }
-}
-
-@media (max-width: 550px) {
-
-    .imagemProjeto img{
-        left: 0;
-        width: 50%;
-    }
-
-}
-
-@media (max-width: 420px) {
-
-    .imagemProjeto { top: -10%;}
-
-    .imagemProjeto img{
-        width: 55%;
-    }
-
-    .contSecundario {
-        bottom: 24%;
-        height: 400px;
-    }
-
-    .link{font-size: 0.55em;}
-}
-
-@media (max-width: 380px) {
-
-    .imagemProjeto img{
-        width: 60%;
-    }
+    .contSecundario{top: -5%;}
 
     .contSecundario h1{
         font-size: 0.9em;
@@ -180,236 +110,27 @@
 
     .link{
         font-size: 0.5em;}
-  
 }
 
-@media (max-width: 380px) {
+@media (max-width: 412px) and (max-height: 846px){
 
-    .imagemProjeto img{
-        width: 70%;
-    }
-}
-
-@media (max-height: 844px) {
-
-    .imagemProjeto img{
-        height: 90%;
-    }
-
-    .imagemProjeto{
-        top: 0%;
-    }
-
-    .contSecundario {
-        bottom: 0%;
-        height: 450px;
-    }
-
-    .skils{
-        font-size: 0.6em;
-    }
-
-    .texto p { 
-        font-size: 0.7em;
-
-    }
-}
-
-
-@media (max-height: 772px) {
-
-    .imagemProjeto img{
-        width: 60%;
-    }
-}
-
-@media (max-height: 568px) {
-
-    .imagemProjeto img{
-        height: 50%;
-    }
-
-    .imagemProjeto{
-        top: 0%;
-    }
-
-    .contSecundario h1{
-        font-size: 1em;
-        bottom: 0%;
-    }
-
-    .contSecundario {
-        bottom: 0%;
-        height: 400px;
-    }
-
-    .skils{
-        font-size: 0.6em;
-    }
-
-    .texto p { 
-        font-size: 0.65em;
-
-    }
-
-
-    .link{
-        font-size: 0.5em;}
-
-}
-
-@media (max-height: 940px){
-
-    .imagemProjeto {
-        top: -5%;
-    }
-
-    .imagemProjeto img{
-        width: 80%;
-    }
-    
-    .contSecundario{
-        height: 350px;
-        bottom: 5%;
-    }
-
-    .contSecundario h1{
-        font-size: 1em;
-    }
-
-    .skils{
-        font-size: 0.5em;
-    }
-
-    .texto{font-size: 0.6em;}
-
-    .link{
-        font-size: 0.5em;}
+    .contSecundario{top: 1%;}
 } 
 
+@media (max-width: 360px) and (max-height: 780px){
 
-@media (max-height: 780px){
-
-    .imagemProjeto img{
-        left: 28%;
-    }
-  
-} 
- 
-@media (max-width: 414px) and (max-height: 896px){
-
-    .imagemProjeto {
-        top: -5%;
-    }
-
-    .imagemProjeto img{
-        width: 50%;
-    }
-    
-    .contSecundario{
-        height: 350px;
-        bottom: 5%;
-    }
-
-    .contSecundario h1{
-        font-size: 1em;
-    }
-
-    .skils{
-        font-size: 0.5em;
-    }
-
-    .texto{font-size: 0.6em;}
-
-    .link{
-        font-size: 0.5em;}
-} 
-
-@media (max-width: 375px) and (max-height: 667px){
-
-    .imagemProjeto{bottom: 0%;}
-
-    .imagemProjeto img{
-        left: 0px;
-        width: 50%;
-    }
-
-    .contSecundario{
-        height: 310px;
-    }
-
-    .contSecundario h1{
-        font-size: 0.9em;
-        bottom: 0%;
-    }
-
-    .skils{
-        font-size: 0.5em;
-        bottom: 0%;
-    }
+    .contSecundario h1{font-size: 0.8em;}
 
     .texto{font-size: 0.5em;}
 
-    .link{
-        font-size: 0.5em;}
-}
+    .link{font-size: 0.5em;}
+} 
 
-@media (max-width: 896px) and (max-height: 414px){
+@media (max-width: 320px) and (max-height: 568px){
 
-    .Container{
-        grid-template-columns: 0.4fr 1fr;
-        grid-template-rows: 1fr;
-    }
+    .contSecundario h1{font-size: 0.7em;}
 
-    .contSecundario{
-        height: 310px;
-    }
+    .texto{font-size: 0.4em;}
 
-    .texto{font-size: 0.6em;}
-    .texto p {padding-top: 0;}
-
-}
-
-@media (max-width: 723px) and (max-height: 280px){
-
-    .contSecundario{height: 220px;}
-
-    .imagemProjeto{
-        top: 0%;}
-
-
-    .imagemProjeto img { 
-        left: 5%;
-        width: 85%;
-    }
-}
-
-@media (max-width: 667px) and (max-height: 375px){
-
-
-    .contSecundario{
-        top: 1%;
-        height: 270px;
-    }
-
-    .imagemProjeto img { 
-        left: 5%;
-        width: 85%;
-    }
-
-}
-
-@media (max-width: 736px) and (max-height: 414px){
-
-
-    .contSecundario{
-        top: 1%;
-        height: 270px;
-    }
-
-    .imagemProjeto img { 
-        left: 5%;
-        width: 85%;
-    }
-
-}
+    .link{font-size: 0.45em;}
+} 
