--- a/src/components/infoprojetos/styles/RestApi.module.css
+++ b/src/components/infoprojetos/styles/RestApi.module.css
@@ -130,7 +130,7 @@
 @media (max-width: 578px) {
 
     .conteinerDescricao {
-        bottom: 10%;
+        bottom: 25%;
         height: 450px;}
 
     .apresentacao p {
@@ -142,7 +142,7 @@
 @media (max-width: 414px) {
 
     .conteinerDescricao {
-        bottom: 15%;
+        bottom: 30%;
     }
 
     .apresentacao p {
@@ -164,29 +164,6 @@
     .linkApi {font-size: 0.5em;}
 }
 
-@media (max-width: 414px) and (max-height: 896px){
-
-    .conteinerDescricao {bottom: 25%;}
-
-    .apresentacao p {
-        font-size: 0.65em;
-    }
-
-}
- 
-@media (max-width: 896px) and (max-height: 414px){
-
-    .conteiner{
-        grid-template-columns: 0.5fr 1fr;
-        grid-template-rows: 1fr;
-    }
-
-    .conteinerDescricao {height: 280px;}
-
-    .imagemRestapi img {width: 90%;}
-
-} 
-
 @media (max-width: 414px) and (max-height: 736px){
 
     .conteinerDescricao {
@@ -200,9 +177,54 @@
     .apresentacao p {
         font-size: 0.6em;
     }
-
 } 
 
+@media (max-width: 375px) and (max-height: 812px){
+
+    .conteinerDescricao {bottom: 35%;}
+
+    .apresentacao p {
+        font-size: 0.65em;
+    }
+    .linkApi{font-size: 0.5em}
+}
+
+@media (max-width: 360px) and (max-height: 740px){
+
+    .imagemRestapi img{width: 200px;}
+
+    .conteinerDescricao h1{font-size: 1em;}
+
+    .apresentacao p {
+        font-size: 0.65em;
+    }
+
+    .conteinerDescricao h5{font-size: 1em;}
+
+    .apresentacao h4 {
+        font-size: 0.5em;}
+
+    .linkApi{font-size: 0.45em}
+
+}
+
+@media (max-width: 320px) and (max-height: 568px){
+    .conteinerDescricao h1{font-size: 0.8em;}
+
+    .skilsTec div {font-size: 0.5em;}
+
+    .apresentacao p {
+        font-size: 0.5em;
+    }
+
+    .conteinerDescricao h5{font-size: 0.8em;}
+
+    .apresentacao h4 {
+        font-size: 0.5em;}
+
+    .linkApi{font-size: 0.4em}
+
+}
 
 @media (max-width: 375px) and (max-height: 667px){
 
@@ -216,4 +238,44 @@
     .conteinerDescricao{bottom: 5%;}
 
     .apresentacao{row-gap: 0px;}
+
 }
+
+
+@media (max-width: 896px) and (max-height: 414px){
+
+    .conteiner{
+        grid-template-columns: 0.5fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .conteinerDescricao {height: 280px;}
+
+    .imagemRestapi img {width: 90%;}
+
+} 
+
+
+@media (max-width: 846px) and (max-height: 412px){
+
+    .conteinerDescricao p {font-size: 0.8em;}
+
+} 
+
+@media (max-width: 740px) and (max-height: 360px){
+
+    .conteinerDescricao p {font-size: 0.7em;}
+
+    .linkApi{font-size: 1em;}
+
+} 
+
+@media (max-width: 568px) and (max-height: 320px){
+
+    .conteinerDescricao{height: 250px;}
+
+    .conteinerDescricao p {font-size: 0.6em;}
+
+    .linkApi{font-size: 1em;}
+
+} 
