--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -1,11 +1,13 @@
 .conteiner{
     display: grid;
+    position: relative;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 0.5fr 0.2fr 0.2fr;
     text-align: justify;
     font-size: 1.3em;
-    height: 100vh;
-    width: 70%;
+    height: 100%;
+    width: 80%;
+
 }
 
 .ImagemSobre{
@@ -45,39 +47,23 @@
 
 }
 
-@media (max-width: 900px){
+@media(max-width:800px){
 
-    .conteiner{
-        height: 85vh;
-    }
+    .ImagemSobre img {width: 240px;}
 
-}
-
-@media (max-width: 850px){
+    .Sobre{font-size: 0.9em;}
 
     .Formacao{
         grid-column-start: 1;
         grid-column-end: 3;
         height: 130px;
+        font-size: 0.9em;
     }
-}
-
-@media (max-width: 810px){
-
-    .conteiner{
-        height: 100vh;
-    }
-}
-
-
-@media (max-width: 750px){
     
-    .ImagemSobre img {
-        width:250px;
-    }
+    .ApresentacaoSobre{font-size: 0.9em;}
 }
 
-@media (max-width: 650px) {
+@media(max-width: 650px) {
 
     .conteiner{
         grid-template-columns: 1fr 2fr;
@@ -93,85 +79,4 @@
         grid-column-start:1;
         grid-column-end:3;
     }
-}
-
-@media (max-width: 590px){
-
-    .conteiner{
-        height: 110vh;
-    }
-}
-
-@media (max-width: 475px){
-
-    .conteiner{
-        height: 130vh;
-    }
-}
-
-@media (max-width: 370px){
-
-    .conteiner{
-        height: 160vh;
-    }
-}
-
-@media (max-width: 414px) and (max-height: 896px){
-
-    .conteiner{
-       height: 150vh;
-    }
-}
-
-@media (max-width: 414px) and (max-height: 736px){
-
-    .conteiner{
-       height: 190vh;
-    }
-}
-
-@media (max-width: 375px) and (max-height: 667px){
-
-    .conteiner{
-       height: 200vh;
-    }
-}
-
-@media (max-width: 375px) and (max-height: 667px){
-
-    .conteiner{
-       height: 250vh;
-    }
-}
-
-@media (max-width: 896px) and (max-height: 414px){
-
-    .conteiner{
-        height: 200vh;
-     }
-
-}
-
-@media (max-width: 736px) and (max-height: 414px){
-
-    .conteiner{
-        height: 210vh;
-     }
-
-}
-
-@media (max-width: 746px) and (max-height: 349px){
-
-    .conteiner{
-        height: 250vh;
-     }
-
-}
-
-@media (max-width: 667px) and (max-height: 375px){
-
-    .conteiner{
-        height: 260vh;
-     }
-
 }
