--- a/src/styles/Contato.module.css
+++ b/src/styles/Contato.module.css
@@ -152,3 +152,18 @@ li {margin-top: 30%;}
     }
 
 }
+
+
+@media (max-width: 568px) and (max-height: 320px){
+
+    .conteiner{
+        height: 90vh;
+    }
+
+    .skillDesenvolvimento, .skillProgramacao{
+        font-size: 1em;
+    }
+
+    .skillDesenvolvimento{
+        bottom: 8%;}
+}
