--- a/src/styles/Projetos.module.css
+++ b/src/styles/Projetos.module.css
@@ -118,6 +118,11 @@
     .conteinerProjetos{height: 85%;}
 }
 
+
+@media (max-width: 568px) and (max-height: 320px){
+
+    .conteinerAtivo{width: 95%;}
+}
 /* keyframe */
 
 @keyframes Slider{
